--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@ var ProductRow = React.createClass({
 var ProductTable = React.createClass({
     render: function() {
         var rows = [];
+        var lastCategory = null;
         this.props.products.forEach(function(product){
+            if (product.category !== lastCategory){
+                lastCategory = product.category;
+                rows.push(<ProductCategoryRow category={product.category} />)
+            }
             rows.push(<ProductRow name={product.name} price={product.name}/>)
         });
         return (
